Add company model and paperclip

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,10 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 5
+  host: localhost
+  username: pguser
+  password: 'zhjckfd2505'
 
 development:
   <<: *default
@@ -29,7 +32,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: insurance_companies
+  #username: info_insurance_companies
 
   # The password associated with the postgres role (username).
   #password:
@@ -81,5 +84,5 @@ test:
 production:
   <<: *default
   database: insurance_companies_production
-  username: insurance_companies
-  password: <%= ENV['INSURANCE_COMPANIES_DATABASE_PASSWORD'] %>
+  username: pguser
+  password: 'zhjckfd2505'
